@@ -649,7 +649,7 @@
 1456,Glaive__,Glaive,4,20000,,1200,104,,3,0,0x00004082,7,2,34,2,18,1,5,{},{},{}
 1457,Partizan,Partizan,4,27000,,2000,124,,3,1,0x00004082,7,2,34,2,18,1,5,{},{},{}
 1458,Partizan_,Partizan,4,27000,,2000,124,,3,2,0x00004082,7,2,34,2,18,1,5,{},{},{}
-1459,Partizan__,Partizan,4,27000,,2000,124,,3,0,0x00004082,7,2,34,3,18,1,5,{},{},{}
+1459,Partizan__,Partizan,4,27000,,2000,124,,3,0,0x00004082,7,2,34,2,18,1,5,{},{},{}
 1460,Trident,Trident,4,51000,,1200,150,,3,2,0x00004082,7,2,34,3,33,1,5,{},{},{}
 1461,Trident_,Trident,4,51000,,1200,150,,3,3,0x00004082,7,2,34,3,33,1,5,{},{},{}
 1462,Trident__,Trident,4,51000,,1200,150,,3,0,0x00004082,7,2,34,3,33,1,5,{},{},{}
